gccida/g1/alloc_aux_for_blocks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alloc_aux_for_blocks/src/cfg.c:1098:6: error: use of undeclared identifier 'initialized_6'
if ( initialized_6 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alloc_aux_for_blocks/src/cfg.c:1106:1: error: use of undeclared identifier 'initialized_6'
initialized_6 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alloc_aux_for_blocks/src/obj/cfg.o] Error 1
